# extract_media_ppt

./: .gitignore  .travis.yml  LICENSE.txt  README.MD  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
extract/: __init__.py  service.py
tests/: test_service.py
