[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptmedia"
version = "1.0.1"
description = "Extract images and videos from PowerPoint presentations"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "MaDyEl", email = "madyel@tutanota.com" }]
requires-python = ">=3.10"
keywords = ["powerpoint", "pptx", "media", "extract", "images", "videos"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml>=6.0.2",
    "Pillow>=12.1.1",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/madyel/pptmedia"
Repository = "https://github.com/madyel/pptmedia"
Issues = "https://github.com/madyel/pptmedia/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["extract*"]
